--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "node": "^12"
   },
   "dependencies": {
-    "eslint-plugin-markdown": "^1.0.1",
+    "dotenv": "^8.2.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-import-resolver-node": "^0.3.2",
+    "eslint-plugin-markdown": "^1.0.1",
     "eslint-plugin-no-use-extend-native": "^0.4.1",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-config-airbnb": "^18.0.1"
+    "google-spreadsheet": "^3.0.8",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
