--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
     "node": "^12"
   },
   "dependencies": {
+    "cbr-rates": "^0.3.5",
     "dotenv": "^8.2.0",
+    "google-spreadsheet": "^3.0.8",
+    "googleapis": "^61.0.0",
+    "moment": "^2.24.0",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8",
+    "xml-parser": "latest"
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-import-resolver-node": "^0.3.2",
     "eslint-plugin-markdown": "^1.0.1",
     "eslint-plugin-no-use-extend-native": "^0.4.1",
     "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "google-spreadsheet": "^3.0.8",
-    "moment": "^2.24.0"
-  },
-  "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-promise": "^4.2.1"
   },
   "author": "vetalitty@gmail.com",
   "license": "ISC",
